# face_count

./: face_embed.py  face_embeddings.index  face_metadata.json  main.py  pyproject.toml
temp_uploads/: index.html  script.js  styles.css
