[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.120.4",
    "insightface>=0.7.3",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
]

[dependency-groups]
dev = [
    "backend",
]

[tool.uv.sources]
backend = { workspace = true }
